# libfalltergeist

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.2.6pre1  LICENSE  README.md  falltergeist.h  libfalltergeist.cpp  libfalltergeist.h
debian/: changelog  control  copyright  rules
docs/: .~lock.1.odt#  1.odt
src/: AafFileType.cpp  AafFileType.h  AafGlyph.cpp  AafGlyph.h  AcmFileType.cpp  AcmFileType.h  BioFileType.cpp  BioFileType.h  DatFile.cpp  DatFile.h  DatFileEntry.cpp  DatFileEntry.h  DatFileItem.cpp  DatFileItem.h  Enums.h  Exception.cpp  Exception.h  FileWrapper.cpp  FileWrapper.h  FonFileType.cpp  FonFileType.h  FonGlyph.cpp  FonGlyph.h  FrmDirection.cpp  FrmDirection.h  FrmFileType.cpp  FrmFileType.h  FrmFrame.cpp  FrmFrame.h  GamFileType.cpp  GamFileType.h  GcdFileType.cpp  GcdFileType.h  IFile.h  IntFileType.cpp  IntFileType.h  LipFileType.cpp  LipFileType.h  LstFileType.cpp  LstFileType.h  (+30 more)
src/Aaf/: File.cpp  File.h  Glyph.cpp  Glyph.h
src/Acm/: Decoder.cpp  Decoder.h  File.cpp  File.h  General.h  Unpacker.cpp  Unpacker.h
src/AcmFileType/: Decoder.cpp  Decoder.h  General.h  Unpacker.cpp  Unpacker.h
src/Bio/: File.cpp  File.h  Format.cpp  Format.h  IFormat.h
src/Dat/: Entry.cpp  Entry.h  File.cpp  File.h  Item.cpp  Item.h
src/Fon/: File.cpp  File.h  Glyph.cpp  Glyph.h
src/Frm/: Direction.cpp  Direction.h  File.cpp  File.h  Format.cpp  Format.h  Frame.cpp  Frame.h  IDirection.h  IFormat.h  IFrame.h
src/Gam/: File.cpp  File.h
src/Gcd/: File.cpp  File.h
src/Ini/: File.cpp  File.h  Parser.cpp  Parser.h  Section.cpp  Section.h  Value.cpp  Value.h
src/Int/: File.cpp  File.h  Procedure.cpp  Procedure.h
src/Lip/: File.cpp  File.h
src/Lst/: File.cpp  File.h
src/Map/: Elevation.cpp  Elevation.h  File.cpp  File.h  Object.cpp  Object.h  Script.cpp  Script.h
src/Msg/: File.cpp  File.h  Format.cpp  Format.h  IFormat.h  IMessage.h  Message.cpp  Message.h
src/Mve/: Chunk.cpp  Chunk.h  File.cpp  File.h  Opcode.cpp  Opcode.h
src/Pal/: Color.cpp  Color.h  File.cpp  File.h  Format.cpp  Format.h  IColor.h  IFormat.h
src/Pro/: File.cpp  File.h
src/Rix/: File.cpp  File.h
src/Sve/: File.cpp  File.h
src/Txt/: BaseFile.cpp  BaseFile.h  CSVBasedFile.cpp  CSVBasedFile.h  CSVParser.cpp  CSVParser.h  CityFile.cpp  CityFile.h  EndDeathFile.cpp  EndDeathFile.h  Lexer.cpp  Lexer.h  MapsFile.cpp  MapsFile.h  Parser.cpp  Parser.h  WorldmapFile.cpp  WorldmapFile.h
travis/: linux.install.sh
